[gd_scene load_steps=3 format=3 uid="uid://vq5ky8s0ulyw"]

[ext_resource type="Script" path="res://components/patron_statues/god_statue.gd" id="1_bnq2n"]
[ext_resource type="Texture2D" uid="uid://dvlnijynqgxp5" path="res://assets/patron_choice/poseidon_statue.png" id="2_edjpb"]

[node name="PatronStatue" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bnq2n")
patron_enum = 13

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_edjpb")
centered = false

[node name="ClickableArea" type="Area2D" parent="."]
position = Vector2(-16, -16)

[node name="Polygon" type="CollisionPolygon2D" parent="ClickableArea"]
position = Vector2(41, 91)
polygon = PackedVector2Array(5, 5, 2, 8, 2, 15, 5, 17, 5, 28, 2, 28, 0, 29, -6, 35, -6, 47, 1, 54, 4, 55, 42, 55, 45, 54, 52, 47, 52, 35, 44, 29, 41, 28, 41, 17, 44, 15, 44, 10, 42, 5, 38, 4, 38, -5, 31, -12, 27, -12, 27, -44, 25, -46, 22, -46, 20, -44, 20, -12, 16, -12, 9, -5, 9, 4)

[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_clickable_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_clickable_area_mouse_exited"]
